--- a/CleanArchitecture.API/appsettings.json
+++ b/CleanArchitecture.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Sqlite": "Data Source=users.db"
+    "Sqlite": "Data Source=usersdb.db"
   }
 }
