--- a/CleanArchitecture.Persistence/CleanArchitecture.Persistence.csproj
+++ b/CleanArchitecture.Persistence/CleanArchitecture.Persistence.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\CleanArchitecture.Domain.csproj" />
+    <ProjectReference Include="..\CleanArchitecture.Domain\CleanArchitecture.Domain.csproj" />
   </ItemGroup>
 
 </Project>
